<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.rynfar.eslogistics.LoginActivity">
    <!--背景-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/home_bg" />

    <!--蒙版-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/black_alpha_144" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_edit_frame"
            android:hint="@string/login_hint_name"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white_alpha_224"
            app:theme="@style/Genius.Widget.EditText" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/login_username"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_edit_frame"
            android:hint="@string/login_hint_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white_alpha_224"
            app:theme="@style/Genius.Widget.EditText" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/login_pwd"
            android:layout_marginEnd="16dp"
            android:background="@drawable/transparent_btn_bg"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_remove_red_eye_white_24dp" />

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_pwd"
            android:layout_marginTop="16dp"
            android:background="@color/white_alpha_240"
            android:text="@string/login"
            android:textColor="@color/grey_700"
            android:textSize="16sp" />

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/register_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:text="@string/register_account"
            android:textColor="@color/white_alpha_240"
            android:textSize="16sp"
            app:gTouchColor="@color/white_alpha_160"
            app:gTouchEffect="press" />

        <net.qiujuer.genius.ui.widget.Button
            android:id="@+id/forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_btn_login"
            android:background="@color/transparent"
            android:text="@string/forget_pwd"
            android:textColor="@color/white_alpha_240"
            android:textSize="16sp"
            app:gTouchColor="@color/white_alpha_160"
            app:gTouchEffect="press" />
    </RelativeLayout>


</RelativeLayout>
